--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,7 +21,7 @@ marketing:
     description: 'The CoMind is a Research Group investigating decision making under uncertainty'
     twitter: ''
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-DD7EFT7K30'
     baidu_tongji: ''
     google_tag_manager: ''
     microsoft_clarity: ''
