--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -12,7 +12,7 @@ main:
     url: research
     weight: 20
   - name: Publications
-    url: publications
+    url: publication
     weight: 30
   - name: Outreach
     url: outreach
