--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: ResearchOrganization
     local_business_type: ''
     org_name: 'CoMind Lab'
-    description: 'The CoMind is a Research Group investigating decision making under uncertainty'
+    description: 'The CoMind Lab is a Research Group investigating decision making under uncertainty'
     twitter: ''
   analytics:
     google_analytics: 'G-DD7EFT7K30'
